# fhe-bpce

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  openfhe-development  shell.nix
api/: Cargo.toml
api/src/: lib.rs  sealy.rs
ckks-lib/: Cargo.toml
ckks-lib/src/: cipher.rs  config.rs  key.rs  lib.rs  ops.rs  polynomial.rs
ckks-lib/src/cipher/: scaled.rs
examples/: client_server.rs  comparison.rs  csv.rs  mean.rs  mean_ckks.rs  parquet.rs
fhe-core/: Cargo.toml
fhe-core/src/: api.rs  f64.rs  fq.rs  lib.rs  pring.rs  rand.rs
fhe-core/src/api/: select.rs
fhe-core/src/fq/: polynomial.rs
fhe-core/src/rand/: distributions.rs
fhe-exchange/: Cargo.toml
fhe-exchange/src/: lib.rs
fhe-operations/: Cargo.toml
fhe-operations/src/: lib.rs  selectable_collection.rs  sign.rs  single_ops.rs
fhe-select/: Cargo.toml
fhe-select/src/: lib.rs  selectable_collection.rs  sign.rs
legacy/ckks-lib/src/: cipher.rs  key.rs
legacy/ckks-lib/src/cipher/: scaled.rs
legacy/fhe-core copy/: Cargo.toml
legacy/fhe-core copy/src/: f64.rs  lib.rs  rand.rs
legacy/fhe-core copy/src/rand/: distributions.rs
openfhe-bind/: Cargo.toml  README.md  bindgen_wrapper.h  build.rs
openfhe-lib/: Cargo.toml  Dockerfile  README.md  build.rs  shell.nix
openfhe-lib/src/: lib.rs  main.rs
seal-lib/: Cargo.toml
seal-lib/benches/: cipher.rs  seal-lib.rs
seal-lib/sealy/: Cargo.toml  LICENSE
seal-lib/sealy/src/: ciphertext.rs  components.rs  decryptor.rs  lib.rs  modulus.rs  serialization.rs
seal-lib/sealy/src/encoder/: bgv.rs
seal-lib/sealy/src/evaluator/: base.rs  bfv.rs  bgv.rs  ckks.rs
seal-lib/sealy/src/ext/tensor/: encryptor.rs
seal-lib/src/: context.rs  impls.rs  lib.rs
seal-snippets/: 5_ckks_basics.cpp  example.rs  perf-openfhe.txt  perf.txt
sealy/: Cargo.toml  bindgen_wrapper.h  build.rs
sealy/src/: ciphertext.rs  components.rs  context.rs  decryptor.rs  encoder.rs  encryptor.rs  error.rs  evaluator.rs  key_generator.rs  lib.rs  memory.rs  modulus.rs  parameters.rs  plaintext.rs
sealy/src/encoder/: bfv.rs  ckks.rs
sealy/src/evaluator/: base.rs  bfv.rs  bgv.rs  ckks.rs  mod.rs
sealy/src/ext/: tensor.rs
sealy/src/ext/tensor/: decryptor.rs  encoder.rs  encryptor.rs  evaluator.rs  mod.rs
sealy/src/parameters/: bfv.rs  bgv.rs  ckks.rs  mod.rs
src/: config.rs  exchange.rs  lib.rs  load.rs  main.rs  ops.rs  server.rs
src/client/: config.rs
src/load/: bytes.rs  csv.rs  json.rs  parquet.rs
theory/: FHE1.tex  crack.py  execsum.tex  playground_description.xlsx
zama-lib/: Cargo.toml
zama-lib/benches/: zama-lib.rs
zama-lib/src/: config.rs  lib.rs  main.rs
