[package]
name = "bpce-fhe"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { workspace = true }
clap = { version = "4.5.32", features = ["derive"] }
csv = "1.3.1"
fhe-core = { workspace = true }
fhe-operations = { workspace = true }
log = "0.4.27"
mimalloc = { version = "0.1.44", features = ["secure"] }
parquet = { version = "54.3.0", optional = true }
pretty_env_logger = "0.5.0"
rayon = "1.10.0"
seal-lib = { path = "seal-lib" }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"

[dev-dependencies]
criterion = "0.5.1"
rouille = { git = "https://github.com/bnjbvr/rouille.git" }

[workspace]
members = ["fhe-core", "seal-lib", "fhe-operations", "zama-lib", "openfhe-lib", "openfhe-bind"]

[workspace.dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
fhe-core = { path = "fhe-core" }
fhe-operations = { path = "fhe-operations" }

[features]
parquet = ["dep:parquet"]
