[package]
name = "sealy"
version = "0.2.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
static_assertions = "1.1.0"
thiserror = "2.0.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
link-cplusplus = "1.0.9"

[build-dependencies]
cmake = "0.1.46"
bindgen = "0.70.1"

[features]
default = []
hexl = []
transparent-ciphertexts = []
deterministic = []
